# DucklingScript

./: .gitignore  LICENSE  NOTICE  README.md  a.txt  break_it.duckling  custom_test.py  duckling_script.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: main.yml
cli/: __init__.py  compile.py
ducklingscript/: __init__.py  __main__.py  main.py  tasks.py
ducklingscript/cli/: __init__.py  all.py  app.py  compile.py  config.py  help.py  interpret.py  new.py  version.py
ducklingscript/cli/compile/: command.py  compile.py  pre_line.py  stack.py
ducklingscript/cli/compiler/: __init__.py  compile.py  compiler.py  environment.py  errors.py  expr_tokenizer.py  pre_line.py  stack.py
ducklingscript/cli/compiler/commands/: __init__.py  alt.py  arrow_keys.py  base_command.py  ctrl.py  default_delay.py  delay.py  extended.py  flipper_altchar.py  flipper_altcode.py  flipper_modifier_keys.py  flipper_sysrq.py  gui.py  menu.py  rem.py  repeat.py  shift.py
ducklingscript/cli/compiler/tokenization/: expr_tokenizer.py
ducklingscript/cli/components/: __init__.py  cli_component.py  compile_component.py
ducklingscript/cli/plugins/: __init__.py  app.py  import_plugin.py  plugin_system.py
ducklingscript/cli/plugins/parts/: plugin.py  plugin_bus.py  plugin_system.py
ducklingscript/cli/utils/: __init__.py  command_format.py  config.py  config_compat.py  errors.py  plugin_importer.py
ducklingscript/compiler/: __init__.py  compile_options.py  compiled_ducky.py  compiler.py  environment.py  errors.py  pre_line.py  stack.py  stack_return.py  tab_parse.py
ducklingscript/compiler/commands/: __init__.py  alt.py  arrow_keys.py  base_command.py  break.py  break_loop.py  continue_loop.py  ctrl.py  default_delay.py  delay.py  enter.py  exist.py  extended.py  flipper_altchar.py  flipper_altcode.py  flipper_altstring.py  flipper_default_string_delay.py  flipper_device_id.py  flipper_extended.py  flipper_hold_release.py  flipper_media.py  flipper_modifier_keys.py  flipper_mouse_click.py  flipper_mouse_move.py  flipper_mouse_scroll.py  flipper_special_keys.py  flipper_string_delay.py  flipper_sysrq.py  flipper_wait_for_button_press.py  func.py  gui.py  if_command.py  ignore.py  menu.py  not_exist.py  not_exists.py  pass_command.py  print_command.py  quackinter_general_keys.py  quackinter_println.py  (+11 more)
ducklingscript/compiler/environments/: __init__.py  base_environment.py  environment.py  project_environment.py  variable_environment.py
ducklingscript/compiler/plugins/: __init__.py  ducklingscript_plugin.py  plugin.py  plugin_bus.py
ducklingscript/compiler/sourcemapping/: __init__.py  base64vlq.py  sourcemap.py
ducklingscript/compiler/tokenization/: __init__.py  expr_tokenizer.py  tokenizer.py
ducklingscript/interpreter/: __init__.py  interpreter.py
plans/: .excalidraw  plugins.excalidraw  sourcemaps.excalidraw
testing/: custom_test.py  indent_test.txt  test_compilation.py  test_duckling.py  test_script.txt
tests/: conftest.py  custom.py  custom_test.py
tests/compile_tests/: environment_test.py  indent_test.py  indent_test.txt  indent_test_2.txt  indent_unexpected.txt  parse_comp.txt  parse_comp_test.py  tokenizer_test.py
tests/compile_tests/test_commands/: test_alt.py  test_func.py  test_if.py  test_ignore.py  test_mouse.py  test_not_exist.py  test_print.py  test_repeat.py  test_start.py  test_while.py
(+35 files in other folders)
