[tool.poetry]
name = "ducklingscript"
version = "0.1.2.2"
description = "A transcompiler for converting DucklingScript code into Rubber Ducky Language 1.0"
authors = ["Dragon of Shuu <loganmcederlof@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
pyyaml = "^6.0.1"
setuptools = "^69.0.2"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
duckling = "ducklingscript.main:app"
ducklify = "ducklingscript.main:app"
